# HobbyLM

./: .gitignore  @AutomationLog.txt  HF_MODEL_CARD.md  README.md  agent.py  bfcl_eval.py  calc_agent.py  calc_task.py  computer_use.py  config.py  count_params.py  data.py  eval_harness.py  gen_toolcalls.py  generate.py  modal_dreamlite.py  modal_hobbylm.py  modal_mm.py  modal_tools.py  modal_train.py  model.py  moe.py  moe_dreamlite_hq_architecture_training_data.md  multimodal.py  optim.py  requirements.txt  spec_decode.py  speech.py  speech_tool_data.py  stream_data.py  test_agent.py  test_computer_tools.py  test_diffusion.py  test_mobile_agent.py  test_new_functions.py  test_vlm.py  to_aproj.py  to_gguf.py  to_mmproj.py  tool_data.py  (+18 more)
acc_gen/: agent_local.py  agent_loop.py  agent_planned.py  gen_accessibility.py  gen_from_real.py  gen_trajectories.py  harvest_real.py  prompt_0.txt  prompt_1.txt  prompt_2.txt  prompt_3.txt  to_pairs.py  ui_harness.py
docs/: ARCHITECTURE_RESEARCH.md  MULTIMODAL_PLAN.md
dreamlite/: dit.py  unet.py
export/: to_image.py
hobby-chat/: .gitignore  README.md
hobby-chat/src-tauri/: Cargo.toml  tauri.conf.json
hobby-chat/src-tauri/capabilities/: default.json
hobby-chat/src-tauri/icons/: icon.icns
hobby-chat/src-tauri/src/: computer.rs  encoders.rs  hf.rs  main.rs  mcp.rs  server.rs  tools.rs
hobby-chat/ui/: app.js  index.html  style.css
hobby-rs/: Cargo.toml  README.md
hobby-rs-cli/: Cargo.toml  README.md
hobby-rs-cli/src/: config.rs  main.rs  model.rs  ops.rs  quant.rs  sample.rs
hobby-rs/src/: clip.rs  config.rs  dcae.rs  dit.rs  imagegen.rs  imgops.rs  lib.rs  main.rs  model.rs  ops.rs  (+5 more)
hobbylm/: sae.py
moe-rs/: Cargo.toml  README.md
space/: README.md  app.py  requirements.txt
training/: modal_hobbylm.py  modal_sae.py  modal_space.py  modal_tools.py  modal_train.py  train_tools.py
(+13 files in other folders)
