[package]
name = "hobby-rs-cli"
version = "0.1.0"
edition = "2021"
description = "From-scratch CPU inference engine for the 500M hobbylm MoE LLM (reads the F32 GGUF)"

[[bin]]
name = "hobby-rs"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
rayon = "1.10"
fancy-regex = "0.13"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
